add query package, migrate some entity code there, rewrite some router code to be cleaner and not use dicts
